# Technical-Indicators

./: .gitignore  AAPL_10y_1d.csv  AAPL_1mo_90m.csv  AAPL_6mo_1h.csv  CMakeLists.txt  README.md  bollinger_results.csv  csv.cpp  get_data.py  indicators.hpp  main.cpp  vcpkg.json  version.cpp
